--- a/app/src/main/res/layout/activity_cavalier_add_planning_note.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_planning_note.xml
@@ -3,7 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:id="@+id/cours_scrollView">
+    android:id="@+id/noteView">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
