--- a/app/src/main/res/layout/activity_cavalier_add_planning_note.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_planning_note.xml
@@ -16,11 +16,12 @@
             android:layout_height="wrap_content"
             android:weightSum="100"
             android:layout_alignParentTop="true"
-            android:id="@+id/tableLayoutDateDebut">
+            android:id="@+id/tableLayoutDates">
 
             <TableRow
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:id="@+id/dateDebutRowPicker">
 
                 <DatePicker
                     android:id="@+id/dateDebutPicker"
@@ -38,7 +39,7 @@
                     android:timePickerMode="spinner"/>
 
             </TableRow>
-            <TableRow>
+            <TableRow android:id="@+id/dateFinRowPicker">
 
                 <DatePicker
                     android:id="@+id/dateFinPicker"
@@ -55,19 +56,90 @@
                     android:layout_weight="50"
                     android:timePickerMode="spinner"/>
             </TableRow>
+
+            <Button
+                android:id="@+id/saveDates"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/smallexit"
+                android:background="#00000000"
+                android:layout_gravity="center_horizontal"/>
         </TableLayout>
 
-
         <TableLayout
-            android:id="@+id/tableLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tableLayoutDateDebut">
+            android:weightSum="100"
+            android:layout_alignParentTop="true"
+            android:layout_below="@+id/tableLayoutDates"
+            android:id="@+id/tableLayoutDatesTxt">
+
+            <TableRow android:id="@+id/dateDebutRowTxt">
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date Début"
+                    android:textSize="15sp"
+                    android:id="@+id/textView7"
+                    android:layout_column="0"/>
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="15sp"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/textDateDebut"
+                    android:layout_column="1"/>
+
+                <Button
+                    android:id="@+id/updateDates"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableBottom="@drawable/calendar"
+                    android:background="#00000000"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_column="2"/>
+
+            </TableRow>
+
+            <TableRow android:id="@+id/dateFinRowTxt">
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date Fin"
+                    android:textSize="15sp"
+                    android:id="@+id/textView9"
+                    android:layout_column="0"/>
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="15sp"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/textDateFin"
+                    android:layout_column="1"/>
+
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:id="@+id/tableLayoutTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tableLayoutDatesTxt">
 
 
             <TableRow
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:id="@+id/titreRow">
 
                 <TextView
                     android:layout_marginTop="20dp"
@@ -93,7 +165,8 @@
 
             <TableRow
                 android:layout_width="fill_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:id="@+id/noteRow">
 
                 <TextView
                     android:layout_marginTop="10dp"
