--- a/app/src/main/res/layout/activity_cavalier_main.xml
+++ b/app/src/main/res/layout/activity_cavalier_main.xml
@@ -1,99 +1,119 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:weightSum="1">
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-            <Button
-                android:layout_marginTop="6dp"
-                android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:text="@string/title_home_add_cours"
-                android:id="@+id/button4"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:weightSum="1">
 
-            <ImageView
-                android:contentDescription="Cavalier"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@drawable/home"
-                android:layout_gravity="center"
-                android:layout_marginTop="6dp" />
+                <Button
+                    android:layout_marginTop="6dp"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:text="@string/title_home_add_cours"
+                    android:id="@+id/button4"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal" />
 
-            <Button
-                android:layout_marginTop="6dp"
-                android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:text="@string/title_home_list_cours"
-                android:id="@+id/button5"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal" />
+                <ImageView
+                    android:contentDescription="Cavalier"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:src="@drawable/home"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="6dp" />
 
-            <Button
-                android:layout_marginTop="6dp"
-                android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:text="@string/title_home_moniteurs"
-                android:id="@+id/button1"
-                android:textSize="20sp"
-                android:textColor="@android:color/holo_red_dark"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal" />
+                <Button
+                    android:layout_marginTop="6dp"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:text="@string/title_home_list_cours"
+                    android:id="@+id/button5"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal" />
 
-            <Button
-                android:layout_marginTop="6dp"
-                android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:text="@string/title_home_cavaliers"
-                android:id="@+id/button2"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal" />
+                <Button
+                    android:layout_marginTop="6dp"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:text="@string/title_home_moniteurs"
+                    android:id="@+id/button1"
+                    android:textSize="20sp"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal" />
 
-            <Button
-                android:layout_marginTop="6dp"
-                android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:text="@string/title_home_montures"
-                android:id="@+id/button3"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal" />
+                <Button
+                    android:layout_marginTop="6dp"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:text="@string/title_home_cavaliers"
+                    android:id="@+id/button2"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal" />
+
+                <Button
+                    android:layout_marginTop="6dp"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:text="@string/title_home_montures"
+                    android:id="@+id/button3"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal" />
+
+                <Button
+                    android:layout_marginTop="6dp"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
+                    android:text="@string/action_planning"
+                    android:id="@+id/button6"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal" />
+
+                <Button
+                    android:layout_marginTop="6dp"
+                    android:layout_width="400dp"
+                    android:layout_height="45dp"
+                    android:text="@string/action_init_data"
+                    android:id="@+id/button0"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_horizontal" />
+
+            </LinearLayout>
+
+    </ScrollView>
+
+    <ListView
+        android:id="@+id/my_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#333"
+        android:choiceMode="singleChoice"
+        android:divider="#AAA"
+        android:dividerHeight="1dp" />
+
+</android.support.v4.widget.DrawerLayout>
 
 
-            <Button
-                android:layout_marginTop="6dp"
-                android:layout_width="400dp"
-                android:layout_height="45dp"
-                android:text="@string/action_init_data"
-                android:id="@+id/button0"
-                android:textSize="12sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal" />
 
-            <Button
-                android:layout_marginTop="6dp"
-                android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:text="@string/action_planning"
-                android:id="@+id/button6"
-                android:textColor="@android:color/holo_red_dark"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_gravity="center_horizontal" />
-
-        </LinearLayout>
-
-</ScrollView>
