--- a/app/src/main/res/layout/custom_spinner.xml
+++ b/app/src/main/res/layout/custom_spinner.xml
@@ -7,8 +7,9 @@
 
     <ImageView android:id="@+id/left_pic"
         android:contentDescription="Image"
-        android:layout_width="70dp"
-        android:layout_height="70dp" />
+        android:layout_width="256px"
+        android:layout_height="280px"
+        android:scaleType="centerCrop"/>
 
     <TextView android:id="@+id/text_main_seen"
         android:layout_width="wrap_content"
