--- a/app/src/main/res/layout/activity_cavalier_list_carte_item.xml
+++ b/app/src/main/res/layout/activity_cavalier_list_carte_item.xml
@@ -37,10 +37,22 @@
         android:layout_height="22dp"
         android:layout_marginLeft="290dp"
         android:layout_centerVertical="true"
-        android:contentDescription="Supprimer"
+        android:contentDescription="Modifier"
         android:background="#00000000"
         android:scaleType="fitCenter"
         android:src="@drawable/details"
+        android:adjustViewBounds="false" />
+
+    <ImageButton
+        android:id="@+id/delete"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginLeft="320dp"
+        android:layout_centerVertical="true"
+        android:contentDescription="Supprimer"
+        android:background="#00000000"
+        android:scaleType="fitCenter"
+        android:src="@drawable/delete"
         android:adjustViewBounds="false" />
 
 </RelativeLayout>
