--- a/app/src/main/res/layout/activity_cavalier_add_personne.xml
+++ b/app/src/main/res/layout/activity_cavalier_add_personne.xml
@@ -122,6 +122,30 @@
                 android:layout_column="1"/>
         </TableRow>
 
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Licence"
+                android:textSize="20sp"
+                android:id="@+id/textView6"
+                android:layout_column="0"
+                />
+
+            <EditText
+                android:layout_marginTop="10dp"
+                android:id="@+id/editTextLicence"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:textSize="20sp"
+                android:inputType="textCapWords" />
+        </TableRow>
+
 
         <TableRow
             android:layout_width="fill_parent"
